--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --Transparentwhite: rgba(255, 255, 255, 0.75);
   --Verylightgray: rgb(242, 242, 242);
 }
-body {
+.body {
   display: flex;
   justify-content: center;
   background-color: var(--Verylightgray);
@@ -22,7 +22,7 @@ main {
   display: flex;
   flex-direction: row;
   width: 65vw;
-  margin-top: 150px;
+  margin-top: 160px;
   border-radius: 15px;
 }
 main > div {
@@ -59,16 +59,21 @@ main > div:nth-of-type(3) {
   background: var(--Verylightgray);
   border: 1px;
   font-family: "Lexend Deca", sans-serif;
-  border-radius: 18px;
+  border-radius: 20px;
+  height: 40px;
+  width: 125px;
 }
 main > div:nth-of-type(1) > button {
   color: var(--Brightorange);
+  width: 130px;
 }
 main > div:nth-of-type(2) > button {
   color: var(--Darkcyan);
+  width: 130px;
 }
 main > div:nth-of-type(3) > button {
   color: var(--Verydarkcyan);
+  width: 130px;
 }
 main > div:nth-of-type(1) > button:hover {
   border-width: 2px;
@@ -86,12 +91,12 @@ main > div:nth-of-type(2) > button:hover {
   background-color: var(--Darkcyan);
   cursor: pointer;
 }
-main > div:nth-of-type(3) > button :hover{
+main > div:nth-of-type(3) > button:hover{
   border-width: 2px;
   border-style: solid;
   border-color: var(--Verylightgray);
   color: var(--Verylightgray);
-  background-color: var(--Verydarkcyan);
+  background-color: var(--Darkcyan);
   cursor: pointer;
 }
 @media screen and (max-width: 375px) {
@@ -100,11 +105,33 @@ main > div:nth-of-type(3) > button :hover{
     width: 85vw;
     margin-bottom: 100px;
   }
+  
+}
+@media screen and (max-width: 1000px)  {
+  .details{
+    height: 250px;
+  }
+}
+@media screen and (max-width: 875px)  {
   main > div:nth-of-type(1) {
     background: var(--Brightorange);
     border-radius: 7px 7px 0px 0px;
   }
   main > div:nth-of-type(3) {
     border-radius: 0px 0px 7px 7px;
+  }
+  main{
+    flex-direction: column;
+  }
+  .details{
+    height: 80px;
+  }
+}
+@media screen and (max-width: 600px)  {
+  main{
+    flex-direction: column;
+  }
+  .details{
+    height: 170px;
   }
 }
